Revert "Adapt for inheritanceless MutableBytes and other bytes fixes"
This reverts commit 9767dc2886de07c2660d7de3db137b17505ab901.